# GTIntercherAndroid

./: .gitmodules  LUAAPIDOCS.md  LUADOCS.md  README.md  build.gradle  gradle.properties  settings.gradle
.github/workflows/: android_ci.yml  attach_debug_build_to_release.yml  debug_build.yml
app/: .gitignore  build.gradle  dev_keystore.jks  proguard-rules.pro
app/src/androidTest/java/com/gt/launcher/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/ModMenu/: CMakeLists.txt
app/src/main/cpp/ModMenu/game/: hook.cpp
app/src/main/cpp/ModMenu/ui/: imgui_wrapper.cpp  ui.cpp  ui.h
app/src/main/cpp/src/: CMakeLists.txt  main.cpp
app/src/main/cpp/src/game/: hook.cpp  hook.h
app/src/main/cpp/src/helper/: gnu_string.h
app/src/main/java/com/anzu/sdk/: AdvertisingIdClientInfo.java  Anzu.java  AnzuFullscreenActivity.java  AnzuScriptableWebInterface.java  AnzuSslSocketFactory.java  (+3 more)
app/src/main/jni/: Android.mk  Application.mk
app/src/main/jni/GrowtopiaFix/: Android.mk
app/src/main/jni/ModMenu/: Android.mk
app/src/main/jni/ModMenu/src/: Main.cpp  Main.h
app/src/main/jni/src/: Main.cpp  Main.h
app/src/main/jni/src/game/: Hook.cpp  Hook.h
app/src/main/res/drawable/: baseline_navigate_before_24.xml  round_back_background.xml  round_border_black.xml  round_border_purple.xml  round_border_transparent.xml
app/src/main/res/layout/: layout_floating_widget.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
(+94 files in other folders)
